# wasm-javascript-exercises

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: exercise1.yml  exercise2.yaml  exercise3.yml
exercise1/: README.md  index.js  package.json  test.js
exercise1/js/: index.js
exercise1/rust/: Cargo.toml  index.js  package.json  test.js
exercise1/rust/src/: lib.rs
exercise2/: README.md  fib.py  rust_fibonacci.wasm  rust_fibonacci_bg.wasm  test_fib.py
exercise3/: Cargo.toml  README.md  index.html
exercise3/src/: main.rs
src/: main.rs  schema.rs
src/database/: db.rs
src/handlers/: handlers.rs
src/models/: models.rs
