[package]
name = "wasm-javascript-exercises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
yew = { version = "0.20.0", features = ["ssr"] }
